--- a/linear/linearexam2.tex
+++ b/linear/linearexam2.tex
@@ -71,7 +71,7 @@
 }
 
 % --- TITLE ---
-\title{\textbf{\Huge MATH 231: Cumulative Review Sheet (Ch 1-3)}}
+\title{\textbf{\Huge MATH 231: Cumulative Review Sheet (Ch 1-5)}}
 \author{Based on Lay, Lay, McDonald (6th Ed.)}
 \date{Fall 2025}
 
@@ -266,6 +266,25 @@ $\det(A) = \sum_{j=1}^n a_{ij} C_{ij}$, where $C_{ij} = (-1)^{i+j} \det(A_{ij})$
     \item $A$ is invertible $\iff \det(A) \neq 0$.
     \item $\det(AB) = \det(A) \det(B)$.
     \item $\det(A^T) = \det(A)$.
+\end{itemize}
+\end{thmbox}
+
+% --- NEW SECTION ADDED HERE ---
+\section*{X. Eigenvalues \& Eigenvectors (5.1, 5.2)}
+\begin{defbox}
+\begin{itemize}
+    \item \textbf{Eigenvector:} A non-zero vector $\mathbf{x}$ such that $A\mathbf{x} = \lambda\mathbf{x}$ for some scalar $\lambda$.
+    \item \textbf{Eigenvalue:} The scalar $\lambda$ above.
+    \item \textbf{Eigenspace:} The set of all solutions to $(A - \lambda I)\mathbf{x} = \mathbf{0}$. This is the $\text{Nul}(A - \lambda I)$.
+\end{itemize}
+\end{defbox}
+\begin{thmbox}
+\textbf{Finding Eigenvalues}
+\begin{itemize}
+    \item $\lambda$ is an eigenvalue $\iff (A - \lambda I)\mathbf{x} = \mathbf{0}$ has a non-trivial solution.
+    \item By the IMT, this is true $\iff \det(A - \lambda I) = 0$.
+    \item This is the \textbf{Characteristic Equation}.
+    \item The eigenvalues of a \textbf{triangular matrix} are the entries on its main diagonal.
 \end{itemize}
 \end{thmbox}
 
